--- a/src/css/main.css
+++ b/src/css/main.css
@@ -67,8 +67,18 @@ img {
   display: grid;
   -ms-grid-rows: auto;
       grid-template-rows: auto;
-  -ms-grid-columns: [full-start] minmax(37.5rem, 1fr) [full-end];
-      grid-template-columns: [full-start] minmax(37.5rem, 1fr) [full-end];
+  -ms-grid-columns: minmax(37.5rem, 1fr);
+      grid-template-columns: minmax(37.5rem, 1fr);
+}
+
+@media only screen and (min-width: 63.75em) {
+  .container {
+    -ms-grid-rows: minmax(53.5, 67vh) min-content;
+        grid-template-rows: minmax(53.5, 67vh) -webkit-min-content;
+        grid-template-rows: minmax(53.5, 67vh) min-content;
+    -ms-grid-columns: (minmax(10rem, 1fr))[8];
+        grid-template-columns: repeat(8, minmax(10rem, 1fr));
+  }
 }
 
 h1 {
@@ -94,8 +104,15 @@ p {
 }
 
 .attribution {
+  margin-top: 2rem;
   font-size: 11px;
   text-align: center;
+}
+
+@media only screen and (min-width: 63.75em) {
+  .attribution {
+    grid-column: 1 / -1;
+  }
 }
 
 .attribution a {
@@ -165,6 +182,18 @@ p {
   background-color: transparent;
 }
 
+@media only screen and (min-width: 63.75em) {
+  .shop-btn {
+    margin: 2.5rem 0 0;
+  }
+}
+
+@media only screen and (min-width: 75em) {
+  .shop-btn {
+    margin: 3.5rem 0 0;
+  }
+}
+
 .shop-btn__link {
   margin-right: 2rem;
   color: var(--color-black);
@@ -190,10 +219,56 @@ p {
   width: 100%;
 }
 
+@media only screen and (min-width: 63.75em) {
+  .about {
+    grid-row: 2 / -1;
+    display: -ms-grid;
+    display: grid;
+    -ms-grid-columns: minmax(30vh, 1fr) minmax(40vh, 1fr) minmax(30vh, 1fr);
+        grid-template-columns: minmax(30vh, 1fr) minmax(40vh, 1fr) minmax(30vh, 1fr);
+  }
+}
+
+@media only screen and (min-width: 63.75em) {
+  .about__picture--1 {
+    -ms-grid-column: 1;
+    -ms-grid-column-span: 1;
+    grid-column: 1 / 2;
+    display: -webkit-box;
+    display: -webkit-flex;
+    display: -ms-flexbox;
+    display: flex;
+  }
+}
+
 .about__info {
   padding: 6rem 0;
   margin: 0 auto;
   width: 80%;
+}
+
+@media only screen and (min-width: 63.75em) {
+  .about__info {
+    -ms-grid-column: 2;
+    -ms-grid-column-span: 1;
+    grid-column: 2 / 3;
+  }
+}
+
+@media only screen and (min-width: 75em) {
+  .about__info {
+    padding: 7rem 0;
+  }
+}
+
+@media only screen and (min-width: 63.75em) {
+  .about__picture--2 {
+    grid-column: 3 / -1;
+    display: -webkit-box;
+    display: -webkit-flex;
+    display: -ms-flexbox;
+    display: flex;
+  }
 }
 
 .header .navigation__icon--hamburger, .header .navigation__icon--close {
@@ -223,6 +298,14 @@ p {
       grid-template-rows: repeat(3, 1fr);
   -ms-grid-columns: (1fr)[3];
       grid-template-columns: repeat(3, 1fr);
+}
+
+@media only screen and (min-width: 63.75em) {
+  .header {
+    -ms-grid-column: 1;
+    -ms-grid-column-span: 5;
+    grid-column: 1 / 6;
+  }
 }
 
 .header .navigation {
@@ -356,25 +439,21 @@ p {
 .header .slider {
   grid-row: 1 / -1;
   grid-column: 1 / -1;
-  display: -webkit-box;
-  display: -webkit-flex;
-  display: -ms-flexbox;
-  display: flex;
   width: 100%;
   height: 100%;
-  overflow: hidden;
 }
 
 .header .slider > * {
   display: none;
   width: 100%;
-  height: 100%;
-  -o-object-fit: cover;
-     object-fit: cover;
+  max-height: 100%;
 }
 
 .header .slider__pictures--1 {
-  display: block;
+  display: -webkit-box;
+  display: -webkit-flex;
+  display: -ms-flexbox;
+  display: flex;
 }
 
 .info {
@@ -382,6 +461,22 @@ p {
   padding: 7.2rem 0;
   margin: 0 auto;
   width: 80%;
+}
+
+@media only screen and (min-width: 63.75em) {
+  .info {
+    -ms-grid-row: 1;
+    -ms-grid-row-span: 1;
+    grid-row: 1 / 2;
+    grid-column: 6 / -1;
+    padding: 6rem 0;
+  }
+}
+
+@media only screen and (min-width: 75em) {
+  .info {
+    width: 70%;
+  }
 }
 
 .info > * {
@@ -403,4 +498,15 @@ p {
       -ms-flex-item-align: end;
               -ms-grid-row-align: end;
           align-self: end;
+}
+
+@media only screen and (min-width: 63.75em) {
+  .slide-btn {
+    -ms-grid-row: 1;
+    -ms-grid-row-span: 1;
+    grid-row: 1 / 2;
+    grid-column: 6 / -1;
+    -ms-grid-column-align: start;
+        justify-self: start;
+  }
 }
