--- a/src/sass/components/_btn.scss
+++ b/src/sass/components/_btn.scss
@@ -40,6 +40,14 @@
     margin          : 6rem 0 0;
     background-color: transparent;
 
+    @include respond-min(large) {
+        margin: 2.5rem 0 0;
+    }
+
+    @include respond-min(xlarge) {
+        margin: 3.5rem 0 0;
+    }
+
     &__link {
         margin-right  : 2rem;
         color         : var(--color-black);
