--- a/src/sass/layout/_about.scss
+++ b/src/sass/layout/_about.scss
@@ -2,13 +2,37 @@
     grid-column: 1 / -1;
     width      : 100%;
 
-    &__picture--1 {}
+    @include respond-min(large) {
+        grid-row             : 2 / -1;
+        display              : grid;
+        grid-template-columns: minmax(30vh, 1fr) minmax(40vh, 1fr) minmax(30vh, 1fr);
+    }
+
+    &__picture--1 {
+        @include respond-min(large) {
+            grid-column: 1 / 2;
+            display    : flex;
+        }
+    }
 
     &__info {
         padding: 6rem 0;
         margin : 0 auto;
         width  : 80%;
+
+        @include respond-min(large) {
+            grid-column: 2 / 3;
+        }
+
+        @include respond-min(xlarge) {
+            padding: 7rem 0;
+        }
     }
 
-    &__picture--2 {}
+    &__picture--2 {
+        @include respond-min(large) {
+            grid-column: 3 / -1;
+            display    : flex;
+        }
+    }
 }
