--- a/src/sass/layout/_header.scss
+++ b/src/sass/layout/_header.scss
@@ -19,6 +19,10 @@
     grid-template-rows   : repeat(3, 1fr);
     grid-template-columns: repeat(3, 1fr);
 
+    @include respond-min(large) {
+        grid-column: 1 / 6;
+    }
+
     .navigation {
         position   : relative;
         grid-row   : 1 / 2;
@@ -127,20 +131,17 @@
     .slider {
         grid-row   : 1 / -1;
         grid-column: 1 / -1;
-        display    : flex;
         width      : 100%;
         height     : 100%;
-        overflow   : hidden;
 
         &>* {
             display   : none;
             width     : 100%;
-            height    : 100%;
-            object-fit: cover;
+            max-height: 100%;
         }
 
         &__pictures--1 {
-            display: block;
+            display: flex;
         }
     }
 }
