--- a/src/sass/layout/_info.scss
+++ b/src/sass/layout/_info.scss
@@ -4,6 +4,16 @@
     margin     : 0 auto;
     width      : 80%;
 
+    @include respond-min(large) {
+        grid-row   : 1 / 2;
+        grid-column: 6 / -1;
+        padding    : 6rem 0;
+    }
+
+    @include respond-min(xlarge) {
+        width: 70%;
+    }
+
     &>* {
         display: none;
     }
