--- a/src/sass/layout/_slides-btn.scss
+++ b/src/sass/layout/_slides-btn.scss
@@ -3,4 +3,10 @@
     grid-column : 1 / -1;
     justify-self: end;
     align-self  : end;
+
+    @include respond-min(large) {
+        grid-row    : 1 / 2;
+        grid-column : 6 / -1;
+        justify-self: start;
+    }
 }
