--- a/src/css/main.css
+++ b/src/css/main.css
@@ -71,11 +71,11 @@ img {
       grid-template-columns: minmax(37.5rem, 1fr);
 }
 
-@media only screen and (min-width: 63.75em) {
+@media only screen and (min-width: 54em) {
   .container {
-    -ms-grid-rows: minmax(53.5, 67vh) min-content;
-        grid-template-rows: minmax(53.5, 67vh) -webkit-min-content;
-        grid-template-rows: minmax(53.5, 67vh) min-content;
+    -ms-grid-rows: minmax(min-content, 67vh) min-content;
+        grid-template-rows: minmax(-webkit-min-content, 67vh) -webkit-min-content;
+        grid-template-rows: minmax(min-content, 67vh) min-content;
     -ms-grid-columns: (minmax(10rem, 1fr))[8];
         grid-template-columns: repeat(8, minmax(10rem, 1fr));
   }
@@ -109,7 +109,7 @@ p {
   text-align: center;
 }
 
-@media only screen and (min-width: 63.75em) {
+@media only screen and (min-width: 54em) {
   .attribution {
     grid-column: 1 / -1;
   }
@@ -154,6 +154,13 @@ p {
 
 @media only screen and (min-width: 48em) {
   .slide-btn > * {
+    width: 6.5rem;
+    height: 6.5rem;
+  }
+}
+
+@media only screen and (min-width: 75em) {
+  .slide-btn > * {
     width: 8rem;
     height: 8rem;
   }
@@ -182,15 +189,21 @@ p {
   background-color: transparent;
 }
 
-@media only screen and (min-width: 63.75em) {
+@media only screen and (min-width: 54em) {
   .shop-btn {
     margin: 2.5rem 0 0;
   }
 }
 
-@media only screen and (min-width: 75em) {
+@media only screen and (min-width: 62em) {
   .shop-btn {
     margin: 3.5rem 0 0;
+  }
+}
+
+@media only screen and (min-width: 75em) {
+  .shop-btn {
+    margin: 4rem 0 0;
   }
 }
 
@@ -219,25 +232,25 @@ p {
   width: 100%;
 }
 
-@media only screen and (min-width: 63.75em) {
+@media only screen and (min-width: 54em) {
   .about {
     grid-row: 2 / -1;
     display: -ms-grid;
     display: grid;
-    -ms-grid-columns: minmax(30vh, 1fr) minmax(40vh, 1fr) minmax(30vh, 1fr);
-        grid-template-columns: minmax(30vh, 1fr) minmax(40vh, 1fr) minmax(30vh, 1fr);
+    -ms-grid-columns: 29% 40% 31%;
+        grid-template-columns: 29% 40% 31%;
   }
 }
 
-@media only screen and (min-width: 63.75em) {
+@media only screen and (min-width: 54em) {
   .about__picture--1 {
     -ms-grid-column: 1;
     -ms-grid-column-span: 1;
     grid-column: 1 / 2;
-    display: -webkit-box;
-    display: -webkit-flex;
-    display: -ms-flexbox;
-    display: flex;
+    width: 100%;
+    height: 100%;
+    -o-object-fit: cover;
+       object-fit: cover;
   }
 }
 
@@ -247,27 +260,28 @@ p {
   width: 80%;
 }
 
-@media only screen and (min-width: 63.75em) {
+@media only screen and (min-width: 54em) {
   .about__info {
     -ms-grid-column: 2;
     -ms-grid-column-span: 1;
     grid-column: 2 / 3;
+    padding: 5rem 0;
   }
 }
 
-@media only screen and (min-width: 75em) {
+@media only screen and (min-width: 62em) {
   .about__info {
     padding: 7rem 0;
   }
 }
 
-@media only screen and (min-width: 63.75em) {
+@media only screen and (min-width: 54em) {
   .about__picture--2 {
     grid-column: 3 / -1;
-    display: -webkit-box;
-    display: -webkit-flex;
-    display: -ms-flexbox;
-    display: flex;
+    width: 100%;
+    height: 100%;
+    -o-object-fit: cover;
+       object-fit: cover;
   }
 }
 
@@ -300,7 +314,7 @@ p {
       grid-template-columns: repeat(3, 1fr);
 }
 
-@media only screen and (min-width: 63.75em) {
+@media only screen and (min-width: 54em) {
   .header {
     -ms-grid-column: 1;
     -ms-grid-column-span: 5;
@@ -446,7 +460,7 @@ p {
 .header .slider > * {
   display: none;
   width: 100%;
-  max-height: 100%;
+  height: 100%;
 }
 
 .header .slider__pictures--1 {
@@ -463,18 +477,19 @@ p {
   width: 80%;
 }
 
-@media only screen and (min-width: 63.75em) {
+@media only screen and (min-width: 54em) {
   .info {
     -ms-grid-row: 1;
     -ms-grid-row-span: 1;
     grid-row: 1 / 2;
     grid-column: 6 / -1;
-    padding: 6rem 0;
+    padding: 5rem 0;
   }
 }
 
-@media only screen and (min-width: 75em) {
+@media only screen and (min-width: 62em) {
   .info {
+    padding: 6rem 0;
     width: 70%;
   }
 }
@@ -500,7 +515,7 @@ p {
           align-self: end;
 }
 
-@media only screen and (min-width: 63.75em) {
+@media only screen and (min-width: 54em) {
   .slide-btn {
     -ms-grid-row: 1;
     -ms-grid-row-span: 1;
