--- a/src/sass/layout/_about.scss
+++ b/src/sass/layout/_about.scss
@@ -5,13 +5,15 @@
     @include respond-min(large) {
         grid-row             : 2 / -1;
         display              : grid;
-        grid-template-columns: minmax(30vh, 1fr) minmax(40vh, 1fr) minmax(30vh, 1fr);
+        grid-template-columns: 29% 40% 31%;
     }
 
     &__picture--1 {
         @include respond-min(large) {
             grid-column: 1 / 2;
-            display    : flex;
+            width      : 100%;
+            height     : 100%;
+            object-fit : cover;
         }
     }
 
@@ -22,6 +24,7 @@
 
         @include respond-min(large) {
             grid-column: 2 / 3;
+            padding    : 5rem 0;
         }
 
         @include respond-min(xlarge) {
@@ -32,7 +35,9 @@
     &__picture--2 {
         @include respond-min(large) {
             grid-column: 3 / -1;
-            display    : flex;
+            width      : 100%;
+            height     : 100%;
+            object-fit : cover;
         }
     }
 }
