--- a/src/sass/layout/_header.scss
+++ b/src/sass/layout/_header.scss
@@ -135,9 +135,9 @@
         height     : 100%;
 
         &>* {
-            display   : none;
-            width     : 100%;
-            max-height: 100%;
+            display: none;
+            width  : 100%;
+            height : 100%;
         }
 
         &__pictures--1 {
