--- a/src/sass/layout/_info.scss
+++ b/src/sass/layout/_info.scss
@@ -1,18 +1,20 @@
 .info {
     grid-column: 1 / -1;
     padding    : 7.2rem 0;
-    margin     : 0 auto;
-    width      : 80%;
+    margin     : auto;
+    width      : 85%;
 
     @include respond-min(large) {
         grid-row   : 1 / 2;
         grid-column: 6 / -1;
-        padding    : 5rem 0;
     }
 
     @include respond-min(xlarge) {
-        padding: 6rem 0;
-        width  : 70%;
+        width: 70%;
+    }
+
+    @include respond-min(huge) {
+        width: 70%;
     }
 
     &>* {
