--- a/src/css/main.css
+++ b/src/css/main.css
@@ -421,6 +421,7 @@ p {
 }
 
 .header .navigation .modal {
+  position: fixed;
   width: 100vw;
   height: 100vh;
   background-color: rgba(0, 0, 0, 0.5);
