--- a/src/sass/layout/_header.scss
+++ b/src/sass/layout/_header.scss
@@ -117,6 +117,7 @@
         }
 
         .modal {
+            position        : fixed;
             width           : 100vw;
             height          : 100vh;
             background-color: rgba(0, 0, 0, .5);
